# Micromouse

./: .gitignore  マイクロマウス_技術メモ.md
3DCAD/: Chassis.dxf  Chassis_and_Mount.dxf  mount_silk.dxf  シャーシ v1.dxf  シャーシ.stl
MATLAB/: AngleFeedback_Analysis.m  AngularFeedback_Analysis.m  CSV_Analysis.asv  CSV_Analysis.m
MATLAB/Log/: 20210606_Ang.asv  20210606_Ang.csv  20210606_AngVel.asv  20210606_AngVel.csv  20210606_AngVel2.csv  20210606_AngVelSin.asv  20210606_AngVelSin.csv
circuit/: MCU.sch  MCU.sch-bak  Micromouse-cache.lib  Micromouse-rescue.lib  Micromouse.kicad_pcb  Micromouse.kicad_pcb-bak  Micromouse.pro  Micromouse.sch  Micromouse.sch-bak  Motor.sch  Motor.sch-bak  PowerSupply-cache.lib  PowerSupply.sch  PowerSupply.sch-bak  WallSensor.sch  WallSensor.sch-bak  fp-info-cache  sym-lib-table
circuit/CSS-0575A-SMT/: CSS-0575A-SMT.lib  CUI_CSS-0575A-SMT.kicad_mod
circuit/Elecrow/20210124/: Micromouse-B_Cu.gbr  Micromouse-B_Mask.gbr  (+4 more)
firmware/: micromouse.code-workspace  stlink_115200bps.stc
firmware/.metadata/: .log4j.xml  version.ini
firmware/Prototype/: Prototype Debug.launch  Prototype.ioc  mx.scratch
firmware/TestCircuit/: .cproject  .mxproject  .project  MouseTestCircuit.code-workspace  TestCircuit Debug.launch  TestCircuit.ioc
firmware/TestCircuit2/: TestCircuit2.ioc
firmware/TestCircuit_1/: TestCircuit Debug.launch  TestCircuit.ioc
firmware/TestProgramming/: CMakeLists.txt  main.cpp
firmware/Test_ICM-20602/: Test_ICM-20602 Debug.launch  Test_ICM-20602.ioc
firmware/Utility/: Calculation.d  DebugConsole.d  DebugConsole.su  subdir.mk
(+286 files in other folders)
